k8s/overlays/crc/patches/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: onboarding
spec:
  template:
    spec:
      containers:
      - name: onboarding
        image: "openshift-acct-mgt:latest"
