k8s/overlays/crc/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding
spec:
  template:
    spec:
      containers:
      - name: onboarding
        image: "openshift-acct-mgt:latest"
