k8s/overlays/crc/patches/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: onboarding-route
spec:
  host: openshift-onboarding.apps-crc.testing
